wp plugin svn sync

--- a/templates/css/get-site-control-admin.css
+++ b/templates/css/get-site-control-admin.css
@@ -307,6 +307,11 @@ body.toplevel_page_getsitecontrol {
 	padding: 0 2.5rem 2rem;
 }
 
+.get-site-control .form-contents .privacy {
+	font-size: 1rem;
+	text-align: center;
+}
+
 .get-site-control .sign-up-form form {
 	margin: .875rem 0;
 }
@@ -434,7 +439,7 @@ body.toplevel_page_getsitecontrol {
 
 .get-site-control .button.button-fill-active {
 	color: #fff;
-	background-color: #528fcc;
+	background-color: #0396ff;
 }
 
 .get-site-control .button.button-fill-default {
@@ -448,7 +453,7 @@ body.toplevel_page_getsitecontrol {
 .get-site-control .button.button-fill-active:focus,
 .get-site-control .button.button-fill-active:active {
 	color: #fff;
-	background-color: #3676b5;
+	background-color: #0079cf;
 	box-shadow: none;
 	text-decoration: none;
 }
@@ -456,7 +461,7 @@ body.toplevel_page_getsitecontrol {
 .get-site-control .button.button-fill-active:disabled,
 .get-site-control .button.button-fill-active[disabled],
 .get-site-control .button.button-fill-active.disabled {
-	background: #528fcc !important;
+	background: #0079cf !important;
 	cursor: not-allowed;
 	opacity: .65;
 	box-shadow: none !important;
@@ -481,7 +486,7 @@ body.toplevel_page_getsitecontrol {
 	width: 100%;
 	text-align: center;
 	border-top: 1px solid #dfe4ed;
-	padding-top: .875rem;
+	padding-top: 1.625rem;
 	margin: 0;
 	font-size: 14px;
 }
@@ -494,7 +499,7 @@ body.toplevel_page_getsitecontrol {
 	width: 100%;
 	text-align: center;
 	border-top: 1px solid #dfe4ed;
-	padding-top: .875rem;
+	padding-top: 1.625rem;
 	margin: 0;
 	font-size: 1rem;
 }
