--- a/templates/css/get-site-control-admin.css
+++ b/templates/css/get-site-control-admin.css
@@ -83,7 +83,7 @@
 	display: none;
 }
 
-@media screen and (min-width: ~ "0\0") {
+@media screen and (min-width: 0\0) {
 	select {
 		background: none;
 		padding: 5px;
